[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7" featuers=["runtime-tokio", "postgres"] }
serde = { version = "1.0" featuers=["derive"] }
dotenv = "0.15"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
anyhow = { version = "1.0", default-features = false }
